--- a/style.scss
+++ b/style.scss
@@ -1,106 +1,385 @@
 *{
-    padding: 0;
+    padding:0;
     margin: 0;
+
 }
-body,html{
-    width: 100%;
-    height: 100%;
+html,body{
+    width:100%;
+    height:100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 body{
     padding: 1rem;
-    background-color: wheat;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: rgb(248, 244, 237);
 }
 main{
-    width: 100%;
-    height: 100%;
-    padding: 1rem;
-    padding-top: 3rem;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-   
-    .top{
+    padding:1.5rem;
+    // width: 100%;
+    padding-top: 5rem;
+    border:1px solid black;
+    .icons{
         display: flex;
         flex-direction: column;
+        padding-top: 1.5rem;
+        gap: 2rem;
+       .icon-1{
+        display: flex;
+        padding: 0.5rem 0;
+        flex-direction: column;
         gap: 1rem;
-        h1{
-            width: 100%;
-            font-weight: 200;
-            font-size: 7vh;
-            span{
-                color:grey;
-            }
-        }
-        p{
-            width:100%;
-            font-weight: 300;
+        img{
+            height: 4rem;
+            width: 4rem;
+            font-weight:100;
             opacity:0.8;
         }
+        h1{
+            font-size: 2rem;
+            font-weight: 500;
+        }
+        p{
+            line-height:1.5;
+            font-size: 1rem;
+            opacity:0.8;
+        }
+       }
     }
-    .bottom{
-        display: grid;
-        gap:2rem;
-        grid-template-areas: 
-        "a a b b "
-        "a a b b "
-        "a a b b "
-        "a a b b "
-        "a a b b "
-        "a a c c "
-        "a a c c "
-        "a a c c ";
+    .icon-2{
+        display: flex;
+        padding: 0.5rem 0;
+        flex-direction: column;
+        gap: 1rem;
+        img{
+            height: 4rem;
+            width: 4rem;
+            font-weight:100;
+            opacity:0.8;
+        }
+        h1{
+            font-size: 2rem;
+            font-weight: 500;
+        }
+        p{
+            line-height:1.5;
+            font-size: 1rem;
+            opacity:0.8;
+        }
+       }
+    
+       .icon-3{
+        display: flex;
+        padding: 0.5rem 0;
+        flex-direction: column;
+        gap: 1rem;
+        img{
+            height: 4rem;
+            width: 4rem;
+            font-weight:100;
+            opacity:0.8;
+        }
+        h1{
+            font-size: 2rem;
+            font-weight: 500;
+        }
+        p{
+            line-height:1.5;
+            font-size: 1rem;
+            opacity:0.8;
+        }
+       }
+       .video{
+        display: flex;
+        padding: 3rem 0;
+        flex-direction: column;
+        gap: 3rem;
+        .team{
+            display: flex;
+            flex-direction: column;
+            gap:0.4rem;
+            h1{
+                font-size: 3rem;
+                font-weight: lighter;
+                
+            }
+            p{
+                line-height:1.6;
+                font-size: 1.3rem;
+                opacity:0.6;
+                width: 80%;
+            }
+        }
+        .jacob{
+            width:100%;
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
+            .ceo{
+                display: flex;
+                flex-direction: column;
+                gap: 0.7em;
+                h4{
+                    font-size:1.8rem;
+                    opacity:0.9;
+                    font-weight: 200;
+                }
+            }
+            video{
+                // width: 100%;
+                object-fit: cover;
+                border-radius: 1rem;
+            }
+
+        }
+            .guy{
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+               .ceo{
+                display: flex;
+                flex-direction: column;
+                gap: 0.7em;
+                h4{
+                    font-size:1.8rem;
+                    opacity:0.9;
+                    font-weight: 200;
+                }
+            }
+                video{
+                    width: 100%;
+                    border-radius: 1rem;
+                    object-fit: cover;
+                }
+            }
+            .kristin{
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+            .ceo{
+                display: flex;
+                flex-direction: column;
+                gap: 0.7em;
+                h4{
+                    font-size:1.8rem;
+                    opacity:0.9;
+                    font-weight: 200;
+                }
+            }
+                video{
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 1rem;
+                }
+            }
+            .cam{
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+            .ceo{
+                display: flex;
+                flex-direction: column;
+                gap: 0.7em;
+                h4{
+                    font-size:1.8rem;
+                    opacity:0.9;
+                    font-weight: 200;
+                }
+            }
+                video{
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 1rem;
+                }
+            
+           }
+    }
+    
+}
+.view-1{
+    width: 100%;
+    display: flex;
+    scrollbar-width: none;
+    flex-direction: column;
+    gap:2rem;
+    p{
+        font-weight: 300;
+        opacity: 0.6;
+        font-size: 1.1rem;
+    }
+    h1{
+        font-weight: 500;
+        width: 70%;
+        font-size: 7vh;
     }
     img{
-        display: block;
         width: 100%;
-        height: 100%;
         object-fit: cover;
         border-radius: 1rem;
     }
-    .img-a{
-        grid-area: a;
+}
+.view-2{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    p{
+        font-weight:300;
+        opacity:0.6;
+        font-size: 1.1rem;
     }
-    .img-b{
-        grid-area: b;
-        aspect-ratio: 4/3;
+    h1{
+        font-weight: 100;
+        font-size:6vh;
     }
-    .img-c{
-        grid-area: c;
-        aspect-ratio: 16/9;
+    .btn{
+        width:11rem;
+        padding-top: 0.4rem;
+        height: 2rem;
+        padding-left: 0.7rem;
+        background-color: black;
+        color: white;
+        border-radius: 0.5rem;
+        button{
+            height:90%;
+            width: 90%;
+            font-size: 1.1rem;
+            background-color: black;
+            border: black;
+            color: white;
+            text-align: center;
+        }
     }
+}
+.line{
+    height: 1px;
+    // padding: 1rem 0;
+    background-color: #000;
+    // border: 1px solid black;
 }
 @media(min-width:1020px){
     main{
-        flex-direction: row;
-        justify-content: space-evenly;
-        // align-items: center;
-        .top{
-            width: 50%;
+        padding:4rem;
+        padding-top: 9rem;   
+        .view-1{
+
             h1{
-                font-size: 6vw;
+                font-size: 6rem;
             }
-            p{
-                font-size: 1.5rem;
+        } 
+        .parallel{
+            display: flex;
+            padding-top: 3.5rem;
+            margin-bottom: 4rem;
+            // justify-content: ;
+            .line{
+                width: 1px;
+                height:initial;
+                background-color: black;
+                // padding-left: 3rem;
+            }
+            .view-2{
+                display: flex;
+                flex-direction: column;
+                // padding-right: 4rem;
+                justify-content: space-between;
+                width: 70%;
+                h1{
+                    font-size: 5rem;
+                width:80%;
+                }
+            }
+            .icons{
+                padding-left: 4rem;
+                width: 30%;
+                .line{
+                    width: 100%;
+                    height: 1px;
+                }
             }
         }
-        .bottom{
-            width: 30%;
-            gap: 1rem;
-            height: 30%;
-            grid-template-areas: 
-        ". . b b "
-        "a a b b "
-        "a a b b "
-        "a a b b "
-        "a a b b "
-        "a a c c "
-        "a a c c "
-        ". . c c ";
-        }
-        img{
-            max-width: 35rem;
-            max-height: 35rem;
-        }
+       
+        .video{
+            flex-direction:row;
+            width:100;
+            .line{
+                width:1px;
+                height:initial;
+            }
+            .team{
+                width: 30%;
+                h1{
+                    font-size:4rem;
+                }
+            }
+            .vidio-section{
+                width:70%;
+                justify-content: space-between;
+                flex-direction: column;
+                gap:3rem;
+                .jacob-section{
+                    display: flex;
+                    gap:2rem;
+                    margin-bottom: 3rem;
+
+                }
+                .cam-section{
+                    display:flex;
+                    gap:2rem;
+
+                }
+               .jacob{
+                gap:0.5rem;
+                .ceo{
+                    gap: 0;
+                }
+                h4{
+                    font-size: 1rem;
+                }
+               }
+               .kristin{
+                gap:0.5rem;
+                .ceo{
+                    gap: 0;
+                }
+                h4{
+                    font-size: 1rem;
+                }
+               }
+               .cam{
+                gap:0.5rem;
+                .ceo{
+                    gap: 0;
+                }
+                h4{
+                    font-size: 1rem;
+                }
+               }
+               .guy{
+                gap:0.5rem;
+                .ceo{
+                    gap: 0;
+                }
+                h4{
+                    font-size: 1rem;
+                }
+               }
+                video{
+                    height:15rem;
+                    width:23rem;
+                }
+                p{
+                    font-size:1rem;
+                }
+            }
+        }                                                          
+    }
+    .line{
+        width: 100%;
+        height:1px;
+        background-color: black;
+        // margin: 3rem 0;
     }
 }
